# tally

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: build.yml  dev-build.yml  pages.yml  release.yml
config/: merchant_categories.csv  merchant_categories.csv.example  settings.yaml.example
docs/: index.html
src/budget_analyzer/: __init__.py  analyzer.py  cli.py  config_loader.py  format_parser.py  merchant_utils.py
src/tally/: _version.py  analyzer.py  cli.py  merchant_utils.py  spending_report.css  spending_report.html  spending_report.js
src/tally/assets/: __init__.py  config.html
tests/: test_analyzer.py  test_merchant_utils.py
