[project]
name = "budget-analyzer"
version = "1.0.0"
description = "Analyze credit card and bank statements with automatic merchant categorization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Fowler"}
]
keywords = ["budget", "finance", "spending", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.0",
]

[project.scripts]
budget-analyze = "budget_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/budget_analyzer"]
